--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.3.0",
+    "graphql": "16.3.0",
     "graphql-import": "^1.0.2",
     "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
