--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node_graphql",
   "version": "1.0.0",
   "engines": {
-    "node": "16.x"
+    "node": "14.18.2"
   },
   "description": "",
   "main": "index.js",
@@ -23,10 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "16.3.0",
-    "graphql-import": "^1.0.2",
-    "graphql-tools": "^8.2.0",
+    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "jwt": "^0.2.0",
     "mongoose": "^6.2.0",
